daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N27_bad_review_blind/h0.hex
6f0af6a86469d130d60c866d321818c2c54e17fedc0371374b7ef1bdd190942d72b9614a08b0bde7f8c3ba4806bcf71acc97d44c16b71eabd4d46688b6509c78
